--- a/package.json
+++ b/package.json
@@ -1,37 +1,51 @@
 {
-  "name": "midnightsky",
+  "name": "midnightskypack",
   "version": "1.0.0",
-  "description": "",
   "main": "midnightsky.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack",
     "watch": "webpack-dev-server"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LCC-CIT-Programming-CS233JS/lcc-cit-programming-cs233js-midnightsky-leseastingray.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LCC-CIT-Programming-CS233JS/lcc-cit-programming-cs233js-midnightsky-leseastingray/issues"
+  },
+  "homepage": "https://github.com/LCC-CIT-Programming-CS233JS/lcc-cit-programming-cs233js-midnightsky-leseastingray",
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.5",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.17",
-    "css-loader": "^0.28.7",
-    "dotenv": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "img-loader": "^2.0.0",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "purify-css": "^1.2.5",
-    "purifycss-webpack": "^0.7.0",
-    "style-loader": "^0.19.0",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.3"
+    "concurrently": "^4.1.0",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "http-server": "^0.11.1",
+    "img-loader": "^3.0.1",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.3.1"
+  },
+  "babel": {
+    "presets": [
+      "@babel/env"
+    ]
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
-  }
+    "bootstrap": "^3.4.1",
+    "jquery": "^3.4.0"
+  },
+  "description": ""
 }
